--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,23 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="nav">
+    <ion-content>
+        <img src="/assets/imgs/agenda.png" alt="">
+            <ion-header>
+                    <ion-toolbar>
+                        <ion-title></ion-title>
+                    </ion-toolbar>
+                </ion-header>
+                <ion-content>
+                    <ion-list >
+                        
+                        <button ion-item *ngFor="let page of pages" (click)="goToPage(page.component)" menuClose>
+                                <ion-icon item-left name="{{ page.icon }}"></ion-icon>
+                                {{ page.titulo }}
+                              </button>
+                                               
+                    </ion-list>
+                </ion-content>
+            </ion-content>
+        </ion-menu>
+  
+<ion-nav #nav [root]="rootPage"></ion-nav>
+
