--- a/src/pages/aluno/aluno.scss
+++ b/src/pages/aluno/aluno.scss
@@ -1,3 +1,75 @@
 page-aluno {
-
-}
+    [col-1] {
+        -webkit-box-flex: 0;
+        -webkit-flex: 0 0 8.33333%;
+        -ms-flex: 0 0 8.33333%;
+        flex: 0 0 14.285714285714286%;
+        width: 14.285714285714286%;
+        max-width: 14.285714285714286%;
+      }
+      .col {
+        text-align: center;
+        padding: 5px;
+      }
+      .last-month, .next-month {
+        color: #999999;
+        font-size: 90%;
+      }
+      .currentDate, .otherDate {
+        padding: 5px;
+      }
+      .currentDate {
+        font-weight: bold;
+        background-color: rgb(90, 199, 144);
+        color: white;
+        border-radius: 30px;
+      }
+      .calendar-header {
+        padding: 5%;
+        background-color: rgb(105, 143, 179);
+        color: #000;
+      }
+      .event-bullet {
+        margin: 2px auto;
+        height: 5px;
+        width: 5px;
+        background-color: rgb(27, 130, 226);
+        border-radius: 30px;
+      }
+      .selected-date {
+        width: 20px;
+        height: 2px;
+        background-color: blue;
+      }
+      .unselected-date {
+        border: none;
+      }
+      .calendar-body {
+        .grid {
+          padding: 0;
+        }
+        .col:last-child {
+          border-right: none;
+        }
+        .calendar-weekday, .calendar-date {
+          text-align: center;
+          margin: 0;
+        }
+        .calendar-weekday {
+          font-weight: bold;
+          border-bottom: solid 1px #6479d4;
+          background-color: rgb(106, 163, 218);
+      }
+        .calendar-date {
+          border-top: solid 1px #1a2a73;
+          border-bottom: solid 1px #1a2a73;
+        }
+  
+        .obs{
+            background-color: #899bcf;
+        }
+      }
+    }
+    
+  
+  
