Inserir tela pages login

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -1,6 +1,6 @@
 page-login {
 
-    background-image: url("./assets/imgs/telaLogin.png");
+    background-image: url("telaLogin.png");
 h1{
     text-align: center;
     padding: 20px;
